# AdventOfCode

./: Cargo.toml  README.md
Year2025/: Cargo.toml  start.sh
Year2025/inputs/: day06.txt  day12.txt
Year2025/src/: cli.rs  days.rs  errors.rs  io.rs  main.rs
Year2025/src/days/day01/: errors.rs  part1.rs  part2.rs
Year2025/src/days/day02/: errors.rs  part1.rs  part2.rs
Year2025/src/days/day03/: errors.rs  part1.rs  part2.rs
Year2025/src/days/day04/: errors.rs  part1.rs  part2.rs
Year2025/src/days/day05/: errors.rs  part1.rs  part2.rs
Year2025/src/days/day06/: errors.rs  part1.rs  part2.rs
Year2025/src/days/day07/: errors.rs  part1.rs  part2.rs
Year2025/src/days/day08/: errors.rs  part1.rs  part2.rs
Year2025/src/days/day09/: errors.rs  part1.rs  part2.rs
Year2025/src/days/day10/: errors.rs  part1.rs  part2.rs
Year2025/src/days/day11/: errors.rs  part1.rs  part2.rs
Year2025/src/days/day12/: errors.rs  part1.rs
common/: Cargo.toml
common/src/: lib.rs
