[package]
name = "Year2025"
version = "0.0.1"
authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]

edition = "2024"
rust-version = "1.91.1"

categories = ["algorithms"]
keywords = ["advent-of-code"]

readme = "../README.md"
repository = "https://github.com/xairaven/AdventOfCode"

[lints]
workspace = true

[dependencies]
common = { path = "../common" }