[package]
name = "Year2025"
version = "0.0.1"
authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]

edition = "2024"
rust-version = "1.92"

categories = ["algorithms"]
keywords = ["advent-of-code"]

readme = "../README.md"
repository = "https://github.com/xairaven/AdventOfCode"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
itertools = "0.14.0"
thiserror = "2.0.17"
z3 = "0.19.6"
